--- a/src/Components/Css/Footer.css
+++ b/src/Components/Css/Footer.css
@@ -5,7 +5,6 @@ footer {
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
-    margin-top: 10px;
     
     
 }
@@ -14,7 +13,7 @@ footer .content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%
+    width: 80%;
     color :  aliceblue;
     
     
