--- a/src/Components/Css/Navbar.css
+++ b/src/Components/Css/Navbar.css
@@ -2,9 +2,7 @@
     width: 80%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-
-   
+    align-items: center;  
 }
 nav {
     width: 100%;
@@ -31,6 +29,7 @@ nav {
 }
 .link li:hover {
     color: #003F7E ;
+    text-decoration: underline #ff6d0c ;
     transition: 0.5s ease-in-out;
     cursor: pointer;
 }
