--- a/src/assets/CSS/Footer.css
+++ b/src/assets/CSS/Footer.css
@@ -1,10 +1,14 @@
 footer {
     width: 100%;
+    position: relative;
+    margin-top: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
+    
+
     
     
 }
@@ -15,21 +19,20 @@ footer .content {
     align-items: center;
     width: 80%;
     color :  aliceblue;
-    
-    
+   
 }
 #logo{
-    width: 210px;
+    width: 180px;
     margin-left: -20px;
     height: 210px;
 
 }
 .address h3{
-    font-size: 39px;
+    font-size: 20px;
 }
 .address p{
     font-family: Verdana, Geneva, Tahoma, sans-serif  ;
-    font-size: 18px;
+    font-size: 16px;
 }
 .socmed ul {
     display: flex;
