--- a/src/assets/CSS/CardBerita.css
+++ b/src/assets/CSS/CardBerita.css
@@ -1,17 +1,18 @@
 .Information {
+
   position: relative;
-  width: auto;
+  width: 100%;
   height: 380px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: #919090;
-  margin-top: 10px;
 }
 
 .Berita{
   position: absolute;
-  width: 1185px;
+  width: 80%;
   height: 280px;
-  top: 40px;
-  left: 90px;
   background: White;
   border-radius: 20px;
 }
