--- a/src/assets/CSS/CardContact.css
+++ b/src/assets/CSS/CardContact.css
@@ -1,3 +1,11 @@
+.Contact{ 
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
 .mitra {
   position: relative;
   width: 1230px;
