--- a/src/assets/CSS/CardBerita.css
+++ b/src/assets/CSS/CardBerita.css
@@ -1,43 +1,40 @@
-.Information {
-
-  position: relative;
-  width: 100%;
-  height: 380px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #919090;
+.Gray-box{
+  background-color: gray;
+  border-radius: 2px;
 }
 
-.Berita{
-  position: absolute;
-  width: 80%;
-  height: 280px;
-  background: White;
+.White-box{
+  margin: 3rem 8rem ;
   border-radius: 20px;
+  background-color: white;
 }
 
-.Berita h3{
-  padding: 30px 0 20px 70px;
-  font-size: 35px;
+.News-Title{
+  text-align: center;
+  padding: 20px;
+  text-transform: uppercase;
 }
 
-.Berita p {
-  position: relative;
-  padding: 0 20px 0 70px;
-  font-size: 20px;
+.Context{
+  font-size: 22px;
+  text-align: left;
+  padding: 10px;
+  margin: 0 30px ;
 }
 
-.Berita .txt{
+.Platfrom{
+  font-size:  30px;
   float: left;
-  display: flex;
-  flex-direction: row;
-  font-size: 30px;
-  padding: 5px 0 10px 100px;
+  margin: 0  5rem 15px;
 }
 
-.Berita span {
-  float: left;
-  font-size: 20px;
-  padding: 3px 10px 0 10px;
+.Platfrom span{
+  font-weight: 400;
+  margin: 3px 0 0 10px;
+}
+
+
+
+.Platfrom span{
+  font-size: 18px;
 }
