--- a/src/assets/CSS/CardContact.css
+++ b/src/assets/CSS/CardContact.css
@@ -1,50 +1,35 @@
 .Contact{ 
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-}
-
-.mitra {
-  position: relative;
-  width: 1230px;
-  height: 246px;
-  margin: 100px 0 100px 65px;
-  background: #003f7e;
+  background-color: #003f7e;
+  width: 75rem;
+  margin-left: 4.5rem; 
   border-radius: 10px;
 }
 
-.mitra h1{
-  font-weight: 400;
-  font-size: 35px;
-  padding: 40px 0 0 60px;
-  color: #ffffff;
+.Wrap-Contact {
+  padding: 3rem 5rem 3rem;
 }
 
-.mitra button {
-  
-  position: absolute;
-  margin: 0 0 0 60px;
-  width: 200px;
-  height: 59px;
-  border-radius: 17px;
-  bottom: 50px;
-
-  background-color: #f27c36;
-  border-color: aliceblue;
-
-  font-size: 20px;
- 
-  align-items: center;
-  text-align: center;
-
+.Contact-Title {
   color: #f5f5f5;
-  cursor: pointer;
 }
 
-.mitra button:hover {
-  background-color: #e05d0f;
+.C-btn {
+  margin-left: 20px;
+  font-size: 18px;
+}
+
+.C-img {
+  position: absolute;
+  right: 1px;
+  width: 500px;
+  height: 270px;
+  background-color:white;
+  border: 1px solid #000000;
+  border-radius: 50px 10px 10px 50px;
+}
+
+.C-img img{
+  margin-left: 6rem;
 }
 
 .mitra .imgmitra {
