--- a/src/assets/CSS/Footer.css
+++ b/src/assets/CSS/Footer.css
@@ -1,47 +1,60 @@
-footer {
-    width: 100%;
-    position: relative;
-    margin-top: 200px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: black;
-    
-
-    
-    
-}
-footer .content {
-    
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 80%;
-    color :  aliceblue;
+.Footer {
+    margin-top: 10rem;
    
 }
-#logo{
-    width: 180px;
-    margin-left: -20px;
-    height: 210px;
 
+.Wrap-Footer{
+    background-color: black;
+    display: flex;
 }
-.address h3{
-    font-size: 20px;
+
+.Footer-img {
+   max-width: 250px;
+   margin: 70px 10px;
 }
-.address p{
-    font-family: Verdana, Geneva, Tahoma, sans-serif  ;
-    font-size: 16px;
+
+.Footer-Address {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2.5rem;
+    margin-right: 1rem ;
 }
-.socmed ul {
+
+.Address-Title h3{
+    color: white;
+    font-size: 35px;
+    line-height: 50px;
+    font-weight: 350;
+}
+
+.Address-Map .map{
+    color: white;
+    margin-right: 130px;
+    font-weight: 300;
+    line-height: 30px;
+}
+
+.Sosial{
+    margin-top: 3rem;
+    margin-right: 5rem ;
+}
+.Sosial ul {
+    display: flex;
     display: flex;
     justify-content: space-between;
     align-items: center;
     
 }
-.socmed ul li {
+.Sosial ul li {
     font-size: 35px;
-    margin-left: 30px;
+    margin-left: 50px;
     list-style: none;
+    color: white;
+} 
+
+.cp{
+    position: absolute;
+    bottom: 1rem;
+    left: 35rem;
 }
+
